[package]
name = "blt-utils"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Byte-level transport utils"
repository = "https://github.com/eta077/blt-utils"
readme = "README.md"
keywords = ["bytes", "serialization", "deserialization", "utility"]

exclude = [".github"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"
thiserror = "1.0.7"
